fixx overflows

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,7 +84,7 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-red-400 text-foreground;
   }
 }
 
